--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "aframe-react": "^4.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-geo-picker": "^0.2.4",
+    "react-location-picker": "^1.5.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
