--- a/pytorch-chatbot/requirements.txt
+++ b/pytorch-chatbot/requirements.txt
@@ -1,10 +1,17 @@
 click==7.1.2
+Flask==1.1.2
+Flask-Cors==3.0.9
 future==0.18.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
 joblib==0.17.0
+MarkupSafe==1.1.1
 nltk==3.5
 numpy==1.19.2
 Pillow==8.0.0
 regex==2020.10.11
+six==1.15.0
 torch==1.6.0
 torchvision==0.7.0
 tqdm==4.50.2
+Werkzeug==1.0.1
