--- a/pytorch-chatbot/.vscode/settings.json
+++ b/pytorch-chatbot/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/matthieukuivenhoven/Desktop/localvendor/res-ar-prototype/pytorch-chatbot/venv/bin/python3"
+    "python.pythonPath": "C:\\Users\\Matthieu\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
 }
