--- a/chatbot-configurator/package.json
+++ b/chatbot-configurator/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "gojs": "^2.1.28",
     "gojs-react": "^1.0.9",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
