--- a/pytorch-chatbot/requirements.txt
+++ b/pytorch-chatbot/requirements.txt
@@ -16,3 +16,11 @@ torchvision==0.8.1
 tqdm==4.50.2
 Werkzeug==1.0.1
 requests==2.24.0
+pip~=20.2.4
+wheel~=0.35.1
+setuptools~=47.1.0
+scikit-learn~=0.23.2
+scipy~=1.5.4
+colorama~=0.4.3
+dataclasses~=0.6
+PyYAML~=5.3.1
