--- a/pytorch-chatbot/requirements.txt
+++ b/pytorch-chatbot/requirements.txt
@@ -11,7 +11,7 @@ numpy==1.19.2
 Pillow==8.0.0
 regex==2020.10.11
 six==1.15.0
-torch==1.7.0
+torch==1.7.0+cpu
 torchvision==0.8.1
 tqdm==4.50.2
 Werkzeug==1.0.1
