--- a/pytorch-chatbot/requirements.txt
+++ b/pytorch-chatbot/requirements.txt
@@ -11,8 +11,9 @@ numpy==1.19.2
 Pillow==8.0.0
 regex==2020.10.11
 six==1.15.0
+--find-links https://download.pytorch.org/whl/torch_stable.html
 torch==1.7.0+cpu
-torchvision==0.8.1
+torchvision==0.8.1+cpu
 tqdm==4.50.2
 Werkzeug==1.0.1
 requests==2.24.0
